# openad-service-bmfm-pm

./: .dockerignore  .gitignore  Dockerfile  README.md  build_image.sh  compose.yaml  compose.yml  env.sh  implementation.py  openad.cfg  params.json  pip-freeze.txt  pyproject.toml
helm-chart/: Chart.yaml  README.md  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  buildconfig.yaml  deployment.yaml  hpa.yaml  imagestream.yaml  ingress.yaml  route.yaml  service.yaml  serviceaccount.yaml
helm-chart/templates/tests/: test-connection.yaml
